// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules|Box collapsible 1`] = `
.c0 {
  padding: 12px;
}

.c3 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 22px;
  width: 0;
}

.c3 svg {
  vertical-align: middle;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #F4F4F4;
  height: 60px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 2.5em 0 1.25em;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  padding: 0 1.25em;
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  margin: 10px 0;
  border: 2px solid #F4F4F4;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Notifications
      <span
        className="c3"
        data-test="container-collapser"
        onClick={[Function]}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        Est id voluptates dolorem recusandae est perferendis. Ut qui et possimus hic in. Molestiae iste sed repudiandae consequatur rerum molestiae reprehenderit exercitationem corrupti. Id accusantium unde qui. Consequatur sint consequatur qui est sapiente aperiam quia ex consequuntur.
 
Eligendi quas perferendis voluptatem. Hic sapiente dolorem suscipit perferendis rem. Odit sit quas magni.
 
Sed nisi veniam earum ex culpa eveniet debitis et. Voluptatem et delectus praesentium et unde ut quibusdam in. Consequuntur quos hic animi ipsam. Tenetur deserunt eius. Dolore consequatur et ipsam ut saepe. In perspiciatis sit consectetur temporibus officia laborum quae illo.
 
Ab soluta in sint in alias. Reiciendis repellendus autem aliquam aut vitae id nesciunt eum. In esse et ut.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules|Box default 1`] = `
.c0 {
  padding: 12px;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  background-color: #F4F4F4;
  height: 60px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 2.5em 0 1.25em;
}

.c3 {
  padding: 0 1.25em;
}

.c1 {
  box-sizing: border-box;
  width: 100%;
  margin: 10px 0;
  border: 2px solid #F4F4F4;
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Notifications
    </div>
    <div
      className="c3"
    >
      <div
        className="c4"
      >
        Ut quam natus consequatur sit vel et. Ut porro aut laborum iure. Et facere placeat molestiae iste molestiae. Commodi inventore sequi quia. Quae sint odit dolor tempora et quo aperiam natus et.
 
Quasi exercitationem delectus ea. Ad sed architecto magnam voluptatem maxime neque. Itaque culpa quis ut.
 
Quod labore ullam quos sed dolorum voluptatibus eum saepe. Omnis sit et quasi. Corrupti vel id.
 
Blanditiis voluptatem provident doloribus aut culpa ratione. Molestias omnis numquam maxime sint libero. Voluptatem magni et voluptas quis non. Architecto non explicabo facere neque et ex quaerat. Aut qui adipisci. Rerum in cupiditate voluptas molestiae fuga voluptatem quia et qui.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules|Box helpers 1`] = `
.c0 {
  padding: 12px;
}

<div
  className="c0"
/>
`;
